# reiChan

./: .gitignore  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.test.json
.cargo/: config.toml
docs/: manga-upscale-agent.md
docs/assets/manga-content-aware-split/phase1_output/: split-report.json
services/manga_upscale_service/: README.md  __init__.py  _compat.py  doublepage_split.py  executor.py  main.py  pyproject.toml  split_cli.py  start_service.bat  start_service.ps1
services/manga_upscale_service/prototypes/: color_cluster_validator.py  edge_texture_validator.py
services/manga_upscale_service/tests/: test_compat.py  test_doublepage_split.py  test_executor.py
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/examples/: edge_texture_gpu.rs
src-tauri/src/: doublepage.rs  lib.rs  manga.rs
src-tauri/src/doublepage/: config.rs  edge_texture.rs  edge_texture_gpu.rs  manual.rs  mask.rs  mod.rs  projection.rs  regions.rs
src-tauri/src/notion/: adapter.rs  commands.rs  io.rs  job_runner.rs  mapping.rs  mod.rs  oauth.rs  preview.rs  scheduler.rs  settings.rs  storage.rs  transform.rs  types.rs
src-tauri/src/notion/import/: mod.rs
src/features/manga/: MangaUpscaleAgent.tsx  manualReadiness.ts
src/features/manga/customSplitDrawer/: CustomSplitDrawer.tsx  ManualSplitIntro.tsx  ManualSplitToolbar.tsx  SplitCanvas.tsx  SplitDetailModal.tsx  SplitPreviewPane.tsx  SplitSettingsPanel.tsx  SplitThumbnailGrid.tsx  previewCache.ts  store.ts  telemetry.ts  useManualSplitController.ts
src/features/notion-import/: MappingEditor.tsx  NotionImportAgent.tsx  Runboard.tsx  runboardStore.ts  types.ts
