[package]
name = "reiChan"
version = "0.1.0"
description = "natsirei个人工具集"
authors = ["natsurei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
natord = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
futures-util = "0.3"
url = "2"
http = "1"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "time"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
tempfile = "3.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "ico"] }
imageproc = { version = "0.24", default-features = false }
opencv = "0.94" 
csv = "1"
rquickjs = "0.9"
thiserror = "1"
lru = "0.12"
wgpu = { version = "0.19", features = ["wgsl"], optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.15", features = ["derive"], optional = true }

[dev-dependencies]
httpmock = "0.7"

[features]
default = ["notion-sqlite", "notion-http", "edge-texture-gpu"]
notion-sqlite = []
notion-http = []
edge-texture-gpu = ["wgpu", "pollster", "bytemuck"]

[[example]]
name = "edge_texture_gpu"
path = "examples/edge_texture_gpu.rs"
required-features = ["edge-texture-gpu"]
